fixes, refactors and added README.md