@@ -1,37 +1,44 @@
 package tests;
 
 import io.appium.java_client.android.AndroidDriver;
-import io.appium.java_client.remote.options.BaseOptions;
+import io.appium.java_client.android.options.UiAutomator2Options;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.openqa.selenium.support.ui.WebDriverWait;
 
+import java.net.URI;
 import java.net.URL;
+import java.time.Duration;
 
 public class TestBase {
 
-    public AndroidDriver driver;
     private final Logger logger = LogManager.getLogger(this.getClass().getName());
+    public AndroidDriver driver;
 
     protected Logger log() {
         return logger;
+    }
+
+    protected WebDriverWait getWebDriverWait() {
+        return new WebDriverWait(driver, Duration.ofSeconds(20));
     }
 
     @BeforeEach
     public void setUp() {
         log().info("android tests setup");
 
-        var options = new BaseOptions()
-                .amend("platformName", "Android")
-                .amend("appium:automationName", "UIAutomator2")
+        var options = new UiAutomator2Options()
+                .setPlatformName("Android")
+                .setAutomationName("UIAutomator2")
                 .amend("appium:ensureWebviewsHavePages", true)
                 .amend("appium:nativeWebScreenshot", true)
-                .amend("appium:newCommandTimeout", 3600)
+                .setNewCommandTimeout(Duration.ofSeconds(3600))
                 .amend("appium:connectHardwareKeyboard", true);
 
         try {
-            URL url = new URL("http://127.0.0.1:4723");
+            URL url = URI.create("http://127.0.0.1:4723").toURL();
             driver = new AndroidDriver(url, options);
             log().info("AndroidDriver has been initialization");
         } catch (Exception e) {
